# libstdc--module

./: CMakeLists.txt  Kconfig  LICENSE  README.md
include/: gmp.h  mpc.h  mpfr.h
lib/: CMakeLists.txt  fake-library
zephyr/: module.yml
